@@ -3,6 +3,7 @@
 	death from the old XML.
 	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
 	* src/plugins/Verify.py: Add double-clicking and mark/unmark/invert.
+	* src/plugins/verify.glade: Add label.
 
 2006-05-28  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/OpenOfficeDoc.py: Allow large cells to span pages (bug 0000165)
